/*
 * SPDX-License-Identifier: EUPL-1.2 OR LicenseRef-commercial
 *
 * Copyright (c) 2012-2026 mgm technology partners GmbH
 *
 * Dual License
 * ------------
 * This source file is part of the mgm A12 Platform and available under
 * a choice of two different licenses:
 *
 * 1. Open-Source License - EUPL v1.2
 *    You may redistribute and/or modify this file under the terms of the
 *    European Union Public License, version 1.2 - see https://eupl.eu/.
 *
 * 2. Commercial License
 *    Alternatively, you may obtain a commercial license from
 *    mgm technology partners GmbH, that permits use of this software
 *    under different terms (including support and maintenance services).
 *
 *    Please contact a12-license@mgm-tp.com for more information.
 *
 * You must select and comply with exactly one of the above license options.
 *
 * Warranty Disclaimer (applies to either option)
 * ----------------------------------------------
 * THIS SOFTWARE IS PROVIDED "AS IS" AND WITHOUT WARRANTY OF ANY KIND,
 * WHETHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NON-INFRINGEMENT, EXCEPT WHERE SUCH DISCLAIMERS ARE HELD TO BE
 * LEGALLY INVALID. SEE THE RESPECTIVE LICENSE TEXT FOR DETAILS.
 */

import * as Fs from "node:fs/promises";
import * as Path from "node:path";

import { test, expect, describe } from "vitest";

import { createMigrationTool } from "@com.mgmtp.a12.migrationtool/migrationtool-core/web";

import { MIGRATION_PARAMETERS } from "../src/internal/config.js";

const ROOT_DIR = Path.join(__dirname, "..");
const FIXTURES_DIR = Path.join(ROOT_DIR, "test", "__fixtures__");

describe("com.mgmtp.a12.overview-model-migration.steps", () => {
	test("can migrate models to the next version properly", async () => {
		// @ts-expect-error we dont public nextOnly in the type definitions
		const nextOnlyMigrationTool = createMigrationTool({ ...MIGRATION_PARAMETERS, nextOnly: true });

		for await (const modelPath of Fs.glob("**/*.json", { cwd: FIXTURES_DIR })) {
			const model = await Fs.readFile(Path.join(FIXTURES_DIR, modelPath), "utf8");
			expect(nextOnlyMigrationTool.migrate([JSON.parse(model)])).toMatchSnapshot(modelPath);
		}
	});
});
